objects/DevicePSPData__c.object
<CustomObject>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>DevicePSPs Data</relationshipLabel>
        <relationshipName>DevicePSPs_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Month_10__c</fullName>
        <label>Month 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_11__c</fullName>
        <label>Month 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_12__c</fullName>
        <label>Month 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase_Number__c</fullName>
        <label>Phase Number</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prototype Wafer Start</fullName>
                </value>
                <value>
                    <fullName>Prototype Wafer Out</fullName>
                </value>
                <value>
                    <fullName>Prototype Wafer ASP</fullName>
                </value>
                <value>
                    <fullName>Production Wafer Start</fullName>
                </value>
                <value>
                    <fullName>Production Wafer Out</fullName>
                </value>
                <value>
                    <fullName>Production Wafer ASP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quarter1__c</fullName>
        <label>Quarter1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter2__c</fullName>
        <label>Quarter2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter3__c</fullName>
        <label>Quarter3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WaferStart_Quarter1__c</fullName>
        <formula>IF(AND(Device__r.Product_Indicator__c = &quot;ASIC&quot;, CONTAINS(TEXT(Phase__c), &quot;ASP&quot;)), (Month_1__c +  Month_2__c + Month_3__c)/3, Month_1__c +  Month_2__c + Month_3__c)</formula>
        <label>WaferStart Quarter1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WaferStart_Quarter2__c</fullName>
        <formula>IF(AND(Device__r.Product_Indicator__c = &quot;ASIC&quot;, CONTAINS(TEXT(Phase__c), &quot;ASP&quot;)), (Month_4__c +  Month_5__c + Month_6__c)/3, Month_4__c +  Month_5__c + Month_6__c)</formula>
        <label>WaferStart Quarter2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WaferStart_Quarter3__c</fullName>
        <formula>IF(AND(Device__r.Product_Indicator__c = &quot;ASIC&quot;, CONTAINS(TEXT(Phase__c), &quot;ASP&quot;)), (Month_7__c +  Month_8__c + Month_9__c)/3, Month_7__c +  Month_8__c + Month_9__c)</formula>
        <label>WaferStart Quarter3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DevicePSP Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Device__c</columns>
        <columns>Phase__c</columns>
        <columns>Year__c</columns>
        <columns>WaferStart_Quarter1__c</columns>
        <columns>WaferStart_Quarter2__c</columns>
        <columns>WaferStart_Quarter3__c</columns>
        <columns>WaferStart_Quarter4__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DevicePSP-{000000}</displayFormat>
        <label>DevicePSP</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DevicePSPs Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>